@@ -22,6 +22,7 @@ import static com.google.common.base.Preconditions.checkNotNull;
 
 import java.net.InetAddress;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.UnknownHostException;
 import java.util.Collection;
@@ -41,11 +42,14 @@ import brooklyn.entity.basic.AbstractEntity;
 import brooklyn.entity.basic.Attributes;
 import brooklyn.entity.basic.DynamicGroup;
 import brooklyn.entity.basic.Lifecycle;
+import brooklyn.entity.basic.ServiceStateLogic;
+import brooklyn.entity.basic.ServiceStateLogic.ServiceNotUpLogic;
 import brooklyn.entity.group.AbstractMembershipTrackingPolicy;
 import brooklyn.entity.webapp.WebAppService;
 import brooklyn.location.geo.HostGeoInfo;
 import brooklyn.policy.PolicySpec;
 import brooklyn.util.collections.MutableSet;
+import brooklyn.util.exceptions.Exceptions;
 import brooklyn.util.flags.SetFromFlag;
 import brooklyn.util.net.Networking;
 import brooklyn.util.time.Duration;
@@ -104,8 +108,11 @@ public abstract class AbstractGeoDnsServiceImpl extends AbstractEntity implement
     @Override
     public void setServiceState(Lifecycle state) {
         setAttribute(HOSTNAME, getHostname());
-        setAttribute(SERVICE_STATE, state);
-        setAttribute(SERVICE_UP, state==Lifecycle.RUNNING);
+        ServiceStateLogic.setExpectedState(this, state);
+        if (state==Lifecycle.RUNNING)
+            ServiceNotUpLogic.clearNotUpIndicator(this, SERVICE_STATE_ACTUAL);
+        else
+            ServiceNotUpLogic.updateNotUpIndicator(this, SERVICE_STATE_ACTUAL, "Not in RUNNING state");
     }
     
     @Override
@@ -126,7 +133,7 @@ public abstract class AbstractGeoDnsServiceImpl extends AbstractEntity implement
         log.debug("Initializing tracker for "+this+", following "+targetEntityProvider);
         tracker = addPolicy(PolicySpec.create(MemberTrackingPolicy.class)
                 .displayName("GeoDNS targets tracker")
-                .configure("sensorsToTrack", ImmutableSet.of(HOSTNAME, ADDRESS, WebAppService.ROOT_URL))
+                .configure("sensorsToTrack", ImmutableSet.of(HOSTNAME, ADDRESS, Attributes.MAIN_URI, WebAppService.ROOT_URL))
                 .configure("group", targetEntityProvider));
         refreshGroupMembership();
     }
@@ -297,10 +304,10 @@ public abstract class AbstractGeoDnsServiceImpl extends AbstractEntity implement
     
     protected String inferHostname(Entity entity) {
         String hostname = entity.getAttribute(Attributes.HOSTNAME);
-        String url = entity.getAttribute(WebAppService.ROOT_URL);
+        URI url = entity.getAttribute(Attributes.MAIN_URI);
         if (url!=null) {
             try {
-                URL u = new URL(url);
+                URL u = url.toURL();
                 
                 String hostname2 = u.getHost(); 
                 if (hostname==null) {
@@ -329,17 +336,21 @@ public abstract class AbstractGeoDnsServiceImpl extends AbstractEntity implement
     }
     
     protected HostGeoInfo inferHostGeoInfo(String hostname, String ip) throws UnknownHostException {
-        // Look up the geo-info from the hostname/ip
-        HostGeoInfo geoH;
-        try {
-            InetAddress addr = (hostname == null) ? null : InetAddress.getByName(hostname);
-            geoH = (addr == null) ? null : HostGeoInfo.fromIpAddress(addr);
-        } catch (UnknownHostException e) {
-            if (ip == null) {
-                throw e;
-            } else {
-                if (log.isTraceEnabled()) log.trace("GeoDns failed to infer GeoInfo from hostname {}; will try with IP {} ({})", new Object[] {hostname, ip, e});
-                geoH = null;
+        HostGeoInfo geoH = null;
+        if (hostname != null) {
+            try {
+                // For some entities, the hostname can actually be an IP! Therefore use Networking.getInetAddressWithFixedName
+                InetAddress addr = Networking.getInetAddressWithFixedName(hostname);
+                geoH = HostGeoInfo.fromIpAddress(addr);
+            } catch (RuntimeException e) {
+                // Most likely caused by (a wrapped) UnknownHostException
+                Exceptions.propagateIfFatal(e);
+                if (ip == null) {
+                    if (log.isTraceEnabled()) log.trace("inferHostGeoInfo failing ("+Exceptions.getFirstInteresting(e)+"): hostname="+hostname+"; ip="+ip);
+                    throw e;
+                } else {
+                    if (log.isTraceEnabled()) log.trace("GeoDns failed to infer GeoInfo from hostname {}; will try with IP {} ({})", new Object[] {hostname, ip, e});
+                }
             }
         }
 
